# floe

./: LICENSE  README.md  codecov.yml
.github/workflows/: build-test.yml  main.yml
cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cpp/cmake/: platform.cmake
cpp/include/floe/: Aead.hpp  Floe.hpp  FloeDecryptor.hpp  FloeEncryptor.hpp  FloeException.hpp  FloeParameterSpec.hpp  Hash.hpp  floe.hpp
cpp/kats/: cpp_GCM256_IV256_1M_pt.txt  cpp_GCM256_IV256_4K_ct.txt  cpp_GCM256_IV256_4K_pt.txt  cpp_GCM256_IV256_64_ct.txt  cpp_GCM256_IV256_64_pt.txt  cpp_rotation_ct.txt  cpp_rotation_pt.txt
cpp/kats_generator/: CMakeLists.txt  create_kats.cpp
cpp/scripts/: format_check.sh  generate_kats.sh  lint.sh
cpp/src/: Aead.cpp  AeadAad.cpp  AeadAad.hpp  AeadIv.cpp  AeadIv.hpp  AeadKey.cpp  AeadKey.hpp  AeadProvider.hpp  BaseSegmentProcessor.cpp  BaseSegmentProcessor.hpp  Floe.cpp  FloeAad.cpp  FloeAad.hpp  FloeDecryptorImpl.cpp  FloeDecryptorImpl.hpp  FloeEncryptorImpl.cpp  FloeEncryptorImpl.hpp  FloeIv.cpp  FloeIv.hpp  FloeKey.cpp  FloeKey.hpp  FloeParameterSpec.cpp  FloePurpose.cpp  FloePurpose.hpp  GcmAead.cpp  GcmAead.hpp  Hash.cpp  KeyDerivator.cpp  KeyDerivator.hpp  MessageKey.cpp  MessageKey.hpp  floe.cpp  floe.hpp  platform.hpp
cpp/test/: CMakeLists.txt
cpp/test/common/: CatchExtensions.hpp
cpp/test/unit/: CMakeLists.txt  floe_tests.cpp
cpp/tests/: CMakeLists.txt  FloeDecryptorTests.cpp  FloeE2ETests.cpp  FloeEncryptorTests.cpp  FloeHeaderTests.cpp  FloeSegmentTests.cpp  FloeTests.cpp  KatTests.cpp  TestUtils.hpp  bounce_tests.cpp  kat_tests.cpp  test_utils.cpp  test_utils.hpp  unit_tests.cpp
cpp/tests/kats/reference/: go_GCM256_IV256_4K_pt.txt
cpp/tests/resources/: reference_lastSegEmpty_ct.txt
java/: build.sh  pom.xml
java/src/main/java/net/snowflake/floe/: Aead.java  AeadAad.java  AeadIv.java  AeadKey.java  AeadProvider.java  BaseSegmentProcessor.java  Floe.java  FloeAad.java  FloeDecryptor.java  FloeDecryptorImpl.java  FloeEncryptor.java  FloeEncryptorImpl.java  FloeException.java  FloeIv.java  FloeIvLength.java  FloeKey.java  FloeParameterSpec.java  FloePurpose.java  GcmAead.java  Hash.java  KeyDerivator.java  MessageKey.java
java/src/main/java/net/snowflake/floe/aead/: AeadProvider.java  Gcm.java
java/src/main/java/net/snowflake/floe/stream/: FloeDecryptingInputStream.java  FloeEncryptingInputStream.java
java/src/test/java/net/snowflake/floe/: FloeDecryptorImplTest.java  FloeE2ETest.java  FloeEncryptorImplTest.java  FloeStreamTest.java  FloeTest.java  IncrementingSecureRandom.java  KatTest.java  ReferenceDataTest.java  SlowInputStream.java
java/src/test/resources/: custom_GCM256_IV256_4K_pt.txt  custom_GCM256_IV256_64_ct.txt  public_java_GCM256_IV256_4K_ct.txt  public_java_GCM256_IV256_64_ct.txt  public_java_lastSegEmpty_ct.txt  public_java_lastSegEmpty_pt.txt  public_java_rotation_ct.txt  reference_GCM256_IV256_1M_pt.txt  reference_GCM256_IV256_4K_pt.txt  reference_GCM256_IV256_64_ct.txt  reference_GCM256_IV256_64_pt.txt  reference_java_GCM256_IV256_1M_pt.txt  reference_java_GCM256_IV256_4K_ct.txt  reference_java_GCM256_IV256_4K_pt.txt  reference_java_GCM256_IV256_64_ct.txt  reference_java_GCM256_IV256_64_pt.txt  reference_java_lastSegAligned_ct.txt  reference_java_lastSegAligned_pt.txt  reference_java_lastSegEmpty_pt.txt  reference_java_rotation_ct.txt  reference_java_rotation_pt.txt  reference_rotation_ct.txt  reference_rotation_pt.txt
kats/reference/: cpp_GCM256_IV256_1M_pt.txt  cpp_GCM256_IV256_4K_ct.txt  cpp_GCM256_IV256_4K_pt.txt  cpp_GCM256_IV256_64_ct.txt  cpp_GCM256_IV256_64_pt.txt  cpp_rotation_ct.txt  cpp_rotation_pt.txt  go_GCM256_IV256_1M_pt.txt  go_GCM256_IV256_4K_ct.txt  go_GCM256_IV256_64_ct.txt  go_GCM256_IV256_64_pt.txt  go_rotation_ct.txt  go_rotation_pt.txt  java_GCM256_IV256_4K_ct.txt  pub_java_GCM256_IV256_64_pt.txt  pub_java_rotation_pt.txt  rust_GCM256_IV256_4K_ct.txt  rust_GCM256_IV256_4K_pt.txt  rust_GCM256_IV256_64_ct.txt  rust_GCM256_IV256_64_pt.txt  rust_rotation_ct.txt  rust_rotation_pt.txt
